--- a/Examples/Monocular/es_flir_color_barbado.yaml
+++ b/Examples/Monocular/es_flir_color_barbado.yaml
@@ -4,6 +4,8 @@
 # Echosounder Parameters. Adjust them!
 #--------------------------------------------------------------------------------------------
 
+Echosounder.enable: 1
+
 # Echosounder position relative to camera (in camera coordinate system)
 Echosounder.position.x: -0.133
 Echosounder.position.y: 0.045
@@ -74,7 +76,7 @@ ORBextractor.minThFAST: 7
 Viewer.KeyFrameSize: 0.1
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 1
-Viewer.PointSize:2
+Viewer.PointSize: 2
 Viewer.CameraSize: 0.15
 Viewer.CameraLineWidth: 2
 Viewer.ViewpointX: 0
